[package]
name = "shop-manager-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.1.0"
anchor-client = { version="0.25.0"}
base58 = "0.2.0"
serde = {version="1.0.143" ,features=["derive"]}
log = "0.4.0"
env_logger = "0.8.4"
lazy_static = "1.4.0"
tokio = { version = "1.20.1", features = ["full"] }
dotenv = "0.15.0"

shop-manager= { path = "../shop-manager/programs/shop-manager", features = ["no-entrypoint"] }
